# chipyard

./: .checkmake-config.ini  .clang-format  .ctagsignore  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .sbtopts  .scalafix.conf  .scalafmt.conf  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-ella  HowToUse.md  LICENSE  Makefrag  Makefrag-Variables  README.md  README_cad.md  afternoon-setup.sh  aptget-sudo.txt  bmark-stats.sh  build-clone-entrypoint.txt  build-setup.sh  build.sbt  build.sc  checkpointing-example.sh  chipyard  common.mk  common.sc  completed.txt  conda-requirements-esp-tools-linux-64.conda-lock.yml  conda-requirements-esp-tools.yaml  conda-requirements-riscv-tools-linux-64.conda-lock.yml  conda-requirements-riscv-tools.yaml  cs152.mk  (+23 more)
.circleci/: README.md  build-toolchains.sh  build-verilator.sh  check-commit.sh  clean-old-files.sh  config.yml  create-hash.sh  defaults.sh  do-firesim-build.sh  do-fpga-rtl-build.sh  do-rtl-build.sh  install-verilator.sh  run-firesim-scala-tests.sh  run-firesim-tests.sh  run-midasexamples-tests.sh  run-tests.sh
.githooks/: ignore-certain-dirs-commit-msg
.github/: CI_README.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  test.yml
Dockerfiles/: CI-Dockerfile  Dockerfile
bootrom/: .gitignore  Makefile  bootrom.S  bootrom.img  bootrom.rv32.img  bootrom.rv64.img  linker.ld
conda-reqs/: base.yaml  chipyard-base.yaml  chipyard-extended.yaml  chipyard-lean.yaml  chipyard-macos-arm-base.yaml  chipyard.yaml  circt.json  docs.yaml  esp-tools.yaml  fsim-marshal.yaml  full.yaml  riscv-tools.yaml  vlsi.yaml
dockerfiles/: CI-Dockerfile  Dockerfile  README.md
docs/: Makefile  Quick-Start.rst  conf.py  index.rst  requirements.txt
ee149-lab/: chipyardlab.md
ee194-lab/: LICENSE
fpga/: .gitignore  Makefile  Makefile.e300artydevkit  README.md  bootrom.rv32.img  common.mk  fpga.log.txt  log.txt  makeZcu102.sh  vivado.jou  vivado_123488.backup.jou  vivado_1398501.backup.jou  vivado_156646.backup.jou  vivado_78320.backup.jou  vivado_pid123488.str  vivado_pid1398501.str  vivado_pid190648.str  vivado_pid78320.str  zcu102Bit.txt
lab/: .gitignore  Makefile
librocc/: Makefile  generic.cc  generic.h  rocc.cc
macros/: build.sbt
power-modeling/: MACTB.v  MACTBTop.v  Makefile  mac.yml  mac_gl_sim.yml  mac_power.yml  mac_rtl_sim.yml
project/: Dependencies.scala  assembly.sbt  dependencies.scala  plugins.sbt
scripts/: add-githooks.sh  build-circt-from-source.sh  build-isa-sim.sh  build-openocd.sh  build-setup.sh  build-static-libfesvr.sh  build-step-init-conda-environment.sh  build-step-precompile-chipyard-scala.sh  build-step-precompile-firesim-scala.sh  build-tests.sh  build-toolchain-extra.sh  build-toolchains.sh  build-util.sh  centos-req.sh  check-tracegen.sh  commitlog-helper.py  conda-requirements.yaml  config-finder.py  dump-mods.py  enable_printfs  entrypoint.sh  (+37 more)
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  SVD_2x2.c  accum.c  adder.c  big-blkdev.c  blkdev.c  blkdev.h  bm_2Dconvo.c  bm_matmul.c  bm_matmulvec.c  calyx-sum.c  calyx-sum.h  charcount.c  cnn_hw_accelerator.c  compute-chiplet-loopback.c  copy-test.c  copyN.c  cordic.c  cordic.h  cpp-hello.cpp  crt.S  ctc-test.c  dma.c  dma2.c  dramcache.h  encoding.h  fft.c  fft_soft.c  fir.c  flush-test.c  gcd.c  hello.c  helloWorld.c  htif.ld  libgloss.mk  link.ld  marchid.h  (+49 more)
tests/beagle-systolic-tests/: matmul  matmul_os  matmul_ws  mvin_mvout  mvin_mvout_acc  mvin_mvout_acc_stride  mvin_mvout_stride  raw_hazard  tiled_matmul_os  tiled_matmul_ws
tests/embench/: Makefile  baremetal_init.c  baremetal_stubs.c  boardsupport.c  boardsupport.h  config.h  tma_counters.h
tests/sbst/: CMakeLists.txt  sbst.c  sbst.ld
tests/tmatests/: Makefile  crt_tma.S  test_backend_bound.c  test_bad_speculation.c  test_bpd_source.c  test_dump.c  test_frontend_bound.c  test_instruction_mix.c  test_l2_counters.c  test_memory_bound.c  test_mmio_counters.c  test_noop.c  test_retired_counts.c  test_simple.c  test_stall_reasons.c  test_tma_basic.c  test_tma_slot_sum.c  tma_counters.h  tma_inject.c  tma_inject_baremetal.c  tma_test_utils.h
tools/DRAMSim3/: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  dramsim3.json  dramsim3.txt  dramsim3main.out
tools/DRAMSim3/configs/: DDR3_1Gb_x8_1333.ini  DDR3_4Gb_x16_1600.ini  DDR3_4Gb_x16_1866.ini  DDR3_4Gb_x4_1600.ini  DDR3_4Gb_x4_1866.ini  DDR3_4Gb_x8_1600.ini  DDR3_4Gb_x8_1866.ini  DDR3_8Gb_x16_1600.ini  DDR3_8Gb_x16_1866.ini  DDR3_8Gb_x4_1600.ini  DDR3_8Gb_x4_1866.ini  DDR3_8Gb_x8_1600.ini  DDR3_8Gb_x8_1866.ini  DDR4_4Gb_x16_1866.ini  DDR4_4Gb_x16_2133.ini  DDR4_4Gb_x16_2133_2.ini  DDR4_4Gb_x16_2400.ini  DDR4_4Gb_x16_2400_2.ini  DDR4_4Gb_x16_2666.ini  DDR4_4Gb_x16_2666_2.ini  DDR4_4Gb_x4_1866.ini  DDR4_4Gb_x4_2133.ini  DDR4_4Gb_x4_2133_2.ini  DDR4_4Gb_x4_2400.ini  DDR4_4Gb_x4_2400_2.ini  DDR4_4Gb_x4_2666.ini  DDR4_4Gb_x4_2666_2.ini  DDR4_4Gb_x8_1866.ini  DDR4_4Gb_x8_2133.ini  DDR4_4Gb_x8_2133_2.ini  DDR4_4Gb_x8_2400.ini  DDR4_4Gb_x8_2400_2.ini  DDR4_4Gb_x8_2666.ini  DDR4_4Gb_x8_2666_2.ini  DDR4_8Gb_x16_1866.ini  DDR4_8Gb_x16_2133.ini  DDR4_8Gb_x16_2133_2.ini  DDR4_8Gb_x16_2400.ini  DDR4_8Gb_x16_2400_2.ini  DDR4_8Gb_x16_2666.ini  (+46 more)
tools/DRAMSim3/ext/headers/: args.hxx
tools/DRAMSim3/scripts/: batch_run.py  final_PowerTemperature_map.py  heatmap.py  parse_config.py  plot_stats.py  trace_gen.py  validation.py
tools/DRAMSim3/src/: bankstate.cc  bankstate.h  channel_state.cc  channel_state.h  command_queue.cc  command_queue.h  common.cc  common.h  configuration.cc  configuration.h  controller.cc  controller.h  cpu.cc  cpu.h  dram_system.cc  dram_system.h  dramsim3.h  hmc.cc  hmc.h  main.cc  memory_system.cc  memory_system.h  refresh.cc  refresh.h  simple_stats.cc  simple_stats.h  sp_ienv.c  thermal.cc  thermal.h  thermal_config.h  thermal_replay.cc  thermal_replay.h  thermal_solver.c  timing.cc  timing.h
tools/DRAMSim3/tests/: example.trace  test_config.cc  test_dramsys.cc  test_hmcsys.cc
(+2512 files in other folders)
